--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap-icons": "^1.11.3",
     "boxicons": "^2.1.4",
+    "firebase": "^10.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-magic-motion": "^1.1.2",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
