modificacion en .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY= AIzaSyB806tTzuSsYkwjYd6iqyP1w8pVXQi1ZbA;
-VITE_FIREBASE_AUTH_DOMAIN= mm7-tienda-urbana.firebaseapp.com;
-VITE_FIREBASE_PROJECT_ID= mm7-tienda-urbana;
-VITE_FIREBASE_STORAGE_BUCKET=mm7-tienda-urbana.appspot.com;
-VITE_FIREBASE_MESSAGING_SENDER_ID=99974164264;
+VITE_FIREBASE_API_KEY= AIzaSyB806tTzuSsYkwjYd6iqyP1w8pVXQi1ZbA
+VITE_FIREBASE_AUTH_DOMAIN= mm7-tienda-urbana.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID= mm7-tienda-urbana
+VITE_FIREBASE_STORAGE_BUCKET=mm7-tienda-urbana.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=99974164264
 VITE_FIREBASE_APP_ID=1:99974164264:web:8bb75abaeda8e9cbbcea1d
